# trapetum

./: .gitignore  CITATION.cff  LICENSE  NOTICE  README.md  avq_gemv3.cu  benchmark.py  gemv_codebook.cu  gemv_codebook_4bit.cu  gemv_codebook_hopper.cu  gemv_codebook_hopper_v2.cu  plot_speedup.py  prof10.cu  prof11.cu  prof2.cu  prof4.cu  prof5.cu  prof9.cu  quant_demo.py  requirements.txt
app/: README.md  build-engine.sh
app/Trapetum/Bridge/: Trapetum-Bridging-Header.h
app/Trapetum/Sources/: ChatViewModel.swift  ContentView.swift  TrapetumEngine.swift
bench/: PARETO.md  README.md  RESULTS_deepseek.md  RESULTS_models.md  RESULTS_specdec.md  avq_oplevel.py  bench_quant.py  pareto.py  pareto_hardened.json  pareto_results.json  plot_inversion.py  plot_mem70.py  plot_pareto.py  results.json  results_70b.json
bench/cpu_probes/: README.md  s12_tbl_gemv.c  s13m2_worksteal.c  s15_full_token.c
bench/runpod_logs/: pareto.json  r1_671b_expert_routing.csv
bench/runpod_logs/sweep_json/Qwen_Qwen2.5-7B-Instruct/: pareto.json
bench/runpod_logs/sweep_json/deepseek-ai_DeepSeek-R1-Distill-Qwen-7B/: pareto.json
installers/: CODE-SIGNING.md  README.md  build-linux-bundle.sh  build-windows.ps1  install-linux.sh  install-windows.ps1  install.ps1  license.rtf  setup-azure-signing.ps1  sign-windows.ps1  svc-install.ps1  svc-remove.ps1  trapetum.service  trapetum.wxs  trusted-signing.metadata.json  uninstall-linux.sh  uninstall-windows.ps1  uninstall.ps1
kernels/: avq_gemv.cu  avq_gemv2.cu  avq_gemv3.cu  bench.cu  benchmark.py  codebook_quant.cu  gemv_codebook_hopper_v3.cu  gemv_codebook_v2decode.cu  prof.cu  prof3.cu  prof6.cu  prof7.cu  prof8.cu  shapes_test.py
model/: analyze_expert_log.py  avq_fixture.py  cbka_format.py  cuda_graph_test.py  dump_layers_hf.py  exp_actsparse.py  exp_avq_rot_7b.py  exp_l1_ppl.py  exp_l1_ppl_results.json  exp_levers.py  exp_levers_results.json  export_deepseek.py  export_deepseek_mtp.py  export_deepseek_stream.py  export_gemma.py  export_runtime.py  export_runtime_local.py  export_safetensors.py  graph_decode.py  llama_ac.py  llama_advq.py  llama_aqlm.py  llama_aqlm_train.py  llama_awq.py  llama_awq_full.py  llama_calib.py  llama_kernel_gen.py  llama_quant.py  llama_serve.py  llama_serve2.py  llama_vq.py  patch_deepseek_rope.py  probe_avq2bit_moe.py  probe_expert_delta.json  probe_expert_delta.py  serve_fp16_baseline.py  setup.sh  test_kmeans_parity.py
paper/: fused-codebook-decode.tex  main.tex
runtime/: Cargo.toml  README.md  build.rs
runtime/cuda/: codebook_gemv.cu
runtime/include/: trapetum.h
runtime/metal/: kernels.metal
runtime/src/: backend_metal.rs  cpu_experts.rs  ffi.rs  lib.rs  main.rs
scripts/: mtp_aws_run.sh  mtp_box_run.sh  run_lever1_7b.sh  run_lever3_7b.sh  run_lever3b_7b.sh  runpod_deepseek.sh  runpod_full.sh  runpod_gemma.sh  runpod_modelsweep.sh  runpod_specdec.sh  runpod_sweep2.sh
