[package]
name = "trapetum"
version = "0.1.0"
edition = "2021"
description = "Minimal Rust runtime hosting the fused 4-bit codebook decode CUDA kernel, no Python in the loop"
license = "BUSL-1.1"

[features]
# GPU backend selection. `cuda` (default) links the nvcc-compiled fused kernel.
# `metal` compiles the crate on Apple platforms against the same 24-function
# backend seam; the Metal kernels themselves land in the next work package.
default = ["cuda"]
cuda = []
metal = ["dep:metal-rs"]

[dependencies]
metal-rs = { package = "metal", version = "0.29", optional = true }
half = "2"   # only for the CPU reference (emulate the fp16 rounding the GPU does)
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
tiny_http = "0.12"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
getrandom = "0.2"
memmap2 = "0.9"  # mmap the routed experts (CBKR/671B): OS pages them in from disk on demand
                 # instead of copying ~300GB into host RAM (see ExpertHost::PackedBytes)

[lib]
name = "trapetum"
path = "src/lib.rs"
# rlib for the bins/tests; staticlib is the libtrapetum.a an iOS/macOS app links.
crate-type = ["rlib", "staticlib"]

[[bin]]
name = "demo"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true

# Profile for the native-app static library (iOS/macOS). LTO internalizes the
# #[no_mangle] C ABI symbols out of a staticlib, so the app lib disables it.
# Build the app archive with:  cargo build --lib --profile applib \
#   --no-default-features --features metal --target aarch64-apple-ios
[profile.applib]
inherits = "release"
lto = false
